--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,8 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+
+<br>
+<video controls>
+  <source src="<%= url_for(@user.profile_video) %> ">
+</video>
