--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :profile_video %>
-    <%= form.file_field :profile_video %>
+    <%= form.file_field :profile_video, accept: "video/*" %>
   </div>
 
   <div class="actions">
